--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,9 +8,18 @@ body {
     background-color: #ffffff;
 }
 
-#page-contents a {
+a {
     color: #f44029;
 }
+
+a:hover {
+    color: #E74C3C;
+}
+
+btn a {
+    color: #ffffff;
+}
+
 
 #brand-icon {
     padding-top: 0px;
@@ -52,6 +61,10 @@ body {
     margin-right: auto;
 }
 
+.btn-lg {
+    margin: 5px;
+}
+
 #home-banner {
     background-color: #BDC3C7;
     color: #ffffff;
@@ -61,4 +74,12 @@ body {
     padding-top: 30px;
     padding-bottom: 30px;
     color: #ECF0F1;
+}
+
+#footer a {
+    color: #ffffff;
+}
+
+#footer a:hover {
+    color: #ffffff;
 }
