--- a/public/app/views/poll.html
+++ b/public/app/views/poll.html
@@ -2,13 +2,13 @@
 <div class="container">
   
   <div class="col-md-12">
-    <h1>Polls.</h1>
+    <h1>Poll.</h1>
     <div class="alert alert-warning" role="alert">
       <p class="text-muted"><b>Message from the VoteGoat:</b> You can view and vote on this poll, but you're not logged in, so you can't add options and your opinion doesn't matter to me. If you log in I might be nice. VoteGoat.</p>
     </div>
   </div>
 
-
+  <h1>{{ poll.title }}</h1>
   <div class="col-md-4" ng-repeat="options in poll.options">
       <div class="well poll-title-well text-center">
           <h3>{{ option.votes }}</h3>
