Added click controller for poll, and front end voting for anon users

--- a/public/app/views/home.html
+++ b/public/app/views/home.html
@@ -3,7 +3,7 @@
   <div class="container text-center">
     <div class="col-md-12">
       <h1>Welcome to</h1>
-      <div class="text-center"><img class="img-responsive img-center" src="../img/votegoatlogo.png" /></div>
+      <div class="text-center"><img class="img-responsive img-center" src="/public/img/votegoatlogo.png" /></div>
       <p class="lead"><br>Make polls, cast your votes and get feedback, from a very smart goat.</p>
       <p class="lead">Don't anger the goat, he can be MEAN.</p>
     </div>
