--- a/public/css/style.css
+++ b/public/css/style.css
@@ -83,3 +83,29 @@ btn a {
 #footer a:hover {
     color: #ffffff;
 }
+
+.chart-legend li span{
+    display: inline-block;
+    width: 18px;
+    height: 18px;
+    margin-right: 5px;
+}
+
+ul.pie-legend {
+    list-style-type: none;
+    font-size: 22px;
+    -webkit-padding-start: 0px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+ul.pie-legend li {
+    display: inline-block;
+    padding-right: 5px;
+    padding-left: 5px;
+}
+
+#voteChart {
+    max-width: 100%;
+    height: auto!important;
+}
