--- a/public/app/views/poll.html
+++ b/public/app/views/poll.html
@@ -2,18 +2,68 @@
 <div class="container">
   
   <div class="col-md-12">
-    <h1>Poll.</h1>
+    <h1>{{ poll.title }}</h1>
     <div class="alert alert-warning" role="alert">
       <p class="text-muted"><b>Message from the VoteGoat:</b> You can view and vote on this poll, but you're not logged in, so you can't add options and your opinion doesn't matter to me. If you log in I might be nice. VoteGoat.</p>
     </div>
   </div>
-
-  <h1>{{ poll.title }}</h1>
-  <div class="col-md-4" ng-repeat="options in poll.options">
-      <div class="well poll-title-well text-center">
-          <h3>{{ option.votes }}</h3>
-      </div>
+  
+  <h1>selections = {{myVote}}</h1>
+  
+  <div class="col-md-6">
+    <canvas id="voteChart" width="80%" height="80%"></canvas>
+    <div id="voteChart-legend" class="chart-legend"></div>
   </div>
+
+  <div ng-if="!checkVote()">
+    <div class="col-md-6">
+        <div class="jumbotron">
+          <h3><i class="fa fa-archive"></i> Place your vote</h3>
+            <form>
+                <div class="form-group">
+                    <select ng-model="$parent.myVote" name="my-vote" class="form-control" ng-options="option.option for option in poll.options">
+                      <option value="">-- choose vote option --</option>
+                    </select>    
+                </div>
+                <button type="submit" ng-click="$parent.addVote()" class="btn btn-block btn-danger">SUBMIT VOTE</button>
+            </form>
+        </div>
+        
+        <div class="jumbotron">
+          <h3><i class="fa fa-unlock-alt"></i> Log in</h3>
+          <p>If you log in, you can add your own vote options to this poll, create your own polls and view your activity. It's totally free.</p>
+          <a href="#/login" class="btn btn-block btn-primary">Log In</a>
+        </div>
+    </div>
+  </div>
+
+  <div ng-if="checkVote()">
+    <div class="col-md-6">
+        <div class="jumbotron">
+          <h3><i class="fa fa-archive"></i> You voted</h3>
+          <p>Looks like you already voted on this poll. You can log in to view your activity and the Goat will keep a record of your votes.</p>
+        </div>
+        
+        <div class="jumbotron">
+          <h3><i class="fa fa-unlock-alt"></i> Log in</h3>
+          <p>If you log in, you can add your own vote options to this poll, create your own polls and view your activity. It's totally free.</p>
+          <a href="#/login" class="btn btn-block btn-primary">Log In</a>
+        </div>
+    </div>
+  </div>
+  
+  
+  
+  <div class="col-md-6">
+    <div class="col-md-6" ng-repeat="option in poll.options">
+        <div class="well poll-title-well text-center">
+            <h4>{{ option.option }}</h4>
+            <h4>{{ option.votes }}</h4>
+        </div>
+    </div>
+  </div>
+
+  
 
 
 </div>
