--- a/public/app/views/poll.html
+++ b/public/app/views/poll.html
@@ -3,25 +3,28 @@
   
   <div class="col-md-12">
     <h1>{{ poll.title }}</h1>
-    <div class="alert alert-warning" role="alert">
-      <p class="text-muted"><b>Message from the VoteGoat:</b> You can view and vote on this poll, but you're not logged in, so you can't add options and your opinion doesn't matter to me. If you log in I might be nice. VoteGoat.</p>
+    
+    <div ng-if="!message">
+      <div class="alert alert-warning" role="alert">
+        <p class="text-muted"><b>Message from the VoteGoat:</b> You can view and vote on this poll, but you're not logged in, so you can't add options and your opinion doesn't matter to me. If you log in I might be nice. VoteGoat.</p>
+      </div>
     </div>
-  </div>
   
-  <h1>selections = {{myVote}}</h1>
+    <div ng-if="message">
+      <div class="alert alert-info" role="alert">
+        <p><b>Message from the VoteGoat:</b> {{ message }}</p>
+      </div>
+    </div>
+    
+  </div>
   
   <div class="col-md-6">
     <canvas id="voteChart" width="80%" height="80%"></canvas>
-    <div id="voteChart-legend" class="chart-legend"></div>
+    <div id="voteChart-legend" class="chart-legend text-center"></div>
   </div>
 
   <div ng-if="checkVote()">
     <div class="col-md-6">
-      <div ng-if="message">
-        <div class="alert alert-info" role="alert">
-          <p>{{ message }}</p>
-        </div>
-      </div>
         <div class="jumbotron">
           <h3><i class="fa fa-archive"></i> You voted</h3>
           <p>Looks like you already voted on this poll. You can log in to view your activity and the Goat will keep a record of your votes.</p>
@@ -58,17 +61,27 @@
     </div>
   </div>
   
+</div>
   
-  <div class="col-md-6">
-    <div class="col-md-6" ng-repeat="option in poll.options">
-        <div class="well poll-title-well text-center">
-            <h4>{{ option.option }}</h4>
-            <h4>{{ option.votes }}</h4>
-        </div>
-    </div>
+<div class="row" id="poll-table-banner">
+  <div class="container">
+  
+  <div class="col-md-12">
+    <h3>Results table.</h3>
+    <table class="table">
+      <thead>
+        <tr>
+          <th>Options</th>
+          <th>Votes</th>
+        </tr>
+      </thead>
+        <tr ng-repeat="option in poll.options">
+          <td>{{ option.option }}</td>
+          <td>{{ option.votes }}</td>
+        </tr>
+    </table>
   </div>
 
-  
 
-
+</div>
 </div>
