--- a/public/css/style.css
+++ b/public/css/style.css
@@ -70,6 +70,12 @@ btn a {
     color: #ffffff;
 }
 
+#poll-table-banner {
+    background-color: #eee;
+    color: #333;
+    padding: 15px;
+}
+
 #footer {
     padding-top: 30px;
     padding-bottom: 30px;
