--- a/public/app/views/home.html
+++ b/public/app/views/home.html
@@ -1,9 +1,9 @@
 
-<div class="row" id="home-banner">
+<div class="container-fluid" id="home-banner">
   <div class="container text-center">
     <div class="col-md-12">
       <h1>Welcome to</h1>
-      <div class="text-center"><img class="img-responsive img-center" src="/public/img/votegoatlogo.png" /></div>
+      <div class="text-center"><img class="img-responsive img-center" src="/public/img/votegoatlogo.png" alt="VoatGoat Logo"/></div>
       <p class="lead"><br>Make polls, cast your votes and get feedback, from a very smart goat.</p>
       <p class="lead">Don't anger the goat, he can be MEAN.</p>
     </div>
@@ -11,8 +11,59 @@
 </div>
 
 <div class="container">
-  <div class="col-md-12">
-    <h1>Test Homepage</h1>
-    <p>Testing page contents <a href="#">and links.</a></p>
+  
+  <div class="col-md-12 text-center text-danger">
+    <h1>About VoteGoat.</h1>
   </div>
+  
+  <div class="col-md-4 col-sm-6 text-center">
+    <div class="jumbotron">
+      <i class="fa fa-border fa-5x fa-question-circle"></i>
+      <p class="lead">You ask a question and get votes.</p>
+    </div>
+  </div>
+  <div class="col-md-4 col-sm-6 text-center">
+    <div class="jumbotron">
+      <i class="fa fa-border fa-5x fa-list-ol"></i>
+      <p class="lead">Add options to your poll for voting.</p>
+    </div>
+  </div>
+  <div class="col-md-4 col-sm-6 text-center">
+    <div class="jumbotron">
+      <i class="fa fa-border fa-5x fa-check-square"></i>
+      <p class="lead">You can vote on other peoples polls.</p>
+    </div>
+  </div>
+  <div class="col-md-4 col-sm-6 text-center">
+    <div class="jumbotron">
+      <i class="fa fa-border fa-5x fa-plus-square"></i>
+      <p class="lead">Add an option for a different answer.</p>
+    </div>
+  </div>
+  <div class="col-md-4 col-sm-6 text-center">
+    <div class="jumbotron">
+      <i class="fa fa-border fa-5x fa-user"></i>
+      <p class="lead">Log in to save your votes and polls.</p>
+    </div>
+  </div>
+  <div class="col-md-4 col-sm-6 text-center">
+    <div class="jumbotron">
+      <i class="fa fa-border fa-5x fa-pie-chart"></i>
+      <p class="lead">View results in chart and table format.</p>
+    </div>
+  </div>
+  
+  <div class="col-md-12 text-center text-danger">
+    <h1>Get Started.</h1>
+  </div>
+  
+  <div class="col-md-12 bottom-div">
+    
+    <div class="btn-group btn-group-justified">
+        <a href="#/polls" class="btn btn-danger btn-lg btn-getstarted"><i class="fa fa-bar-chart"></i> View Polls</a>
+        <a href="#/login" class="btn btn-danger btn-lg btn-getstarted"><i class="fa fa-unlock-alt"></i> Log In</a>
+    </div>
+    
+  </div>
+  
 </div>
