Added new vote backend for auth users

--- a/public/app/views/user_profile.html
+++ b/public/app/views/user_profile.html
@@ -46,7 +46,7 @@
     </div>
     
     <div class="col-md-12">
-        <div class="well text-center">
+        <div class="jumbotron text-center">
           <p><a class="btn btn-danger btn-lg"><i class="fa fa-sign-out"></i> Log Out</a></p>
         </div>
     </div>
