--- a/public/app/views/user_profile.html
+++ b/public/app/views/user_profile.html
@@ -44,10 +44,27 @@
             
         </div>
     </div>
+
+    <div class="col-md-12"> 
+        <h3>Activity.</h3>
+        <div ng-if="user.activity[0]">
+            <div class="list-group">
+              <a href="#/poll/{{ activity.poll }}" class="list-group-item list-group-item-danger" ng-repeat="activity in user.activity">
+                  You voted for <b>{{ activity.option }}</b> on {{ activity.date }}.
+              </a>
+            </div>
+        </div>
+        <div ng-if="!user.activity[0]">
+            <div class="jumbotron text-center">
+              <h3><i class="fa fa-exclamation-circle"></i> No votes yet!</h3>
+            </div>
+        </div>
+    </div>
     
     <div class="col-md-12">
+        <h3>Done voting?</h3>
         <div class="jumbotron text-center">
-          <p><a class="btn btn-danger btn-lg"><i class="fa fa-sign-out"></i> Log Out</a></p>
+          <a class="btn btn-default btn-lg"><i class="fa fa-sign-out"></i> Log Out</a>
         </div>
     </div>
 
