--- a/public/app/views/user_poll.html
+++ b/public/app/views/user_poll.html
@@ -40,24 +40,27 @@
             <form ng-submit="$parent.addVote()">
                 <div class="form-group">
                     <select ng-model="$parent.myVote" name="my-vote" class="form-control" ng-options="option.option for option in poll.options">
-                      <option value="">-- choose vote option --</option>
+                      <option value="">-- select or add other --</option>
                     </select>    
                 </div>
-                <input type="submit" id="submit" class="btn btn-block btn-danger" value="SUBMIT VOTE" />
+                <input type="submit" id="submitVote" class="btn btn-block btn-danger" value="SUBMIT VOTE" />
             </form>
         </div>
         
+        <div ng-if="!myVote">
         <div class="jumbotron">
-          <h3><i class="fa fa-list-ol"></i> Add new option</h3>
-            <form ng-submit="$parent.addOption()">
+          <h3><i class="fa fa-list-ol"></i> Add other</h3>
+          <p>Don't like the options above? Submit your answer below and add a new option to this poll.</p>
+            <form ng-submit="$parent.$parent.addOption()">
                 <div class="form-group">
-                  <input ng-model="$parent.newOption" name="my-option" type="text" class="form-control" placeholder="Add a new answer option...">
+                  <input ng-model="$parent.$parent.newOption" name="my-option" type="text" class="form-control" placeholder="Add a new answer option...">
                   <div ng-if="help">
-                    <span class="help-block text-danger"><small>{{ help }}</small></span>
+                    <div class="help-block text-danger"><small>{{ help }}</small></div>
                   </div>
                 </div>
-                <input type="submit" id="submit" class="btn btn-block btn-danger" value="SUBMIT NEW ANSWER" />
+                <input type="submit" id="submitOther" class="btn btn-block btn-primary" value="SUBMIT OTHER" />
             </form>
+        </div>
         </div>
     </div>
   </div>
