--- a/public/app/views/user_profile.html
+++ b/public/app/views/user_profile.html
@@ -64,7 +64,7 @@
     <div class="col-md-12">
         <h3>Done voting?</h3>
         <div class="jumbotron text-center">
-          <a class="btn btn-default btn-lg"><i class="fa fa-sign-out"></i> Log Out</a>
+          <button ng-click="userLogout()" class="btn btn-default btn-lg"><i class="fa fa-sign-out"></i> Log Out</button>
         </div>
     </div>
 
