Facebook log in complete and profile all working

--- a/public/app/views/user_profile.html
+++ b/public/app/views/user_profile.html
@@ -31,8 +31,8 @@
             
                 <div ng-if="user.facebook">
                     <p>
-                        <strong>Username</strong>: to do<br>
-                        <strong>Email</strong>: to do
+                        <strong>Username</strong>: {{ user.facebook.displayName }}<br>
+                        <strong>Email</strong>: {{ user.facebook.email }}
                     </p>
                 </div>
                 
