--- a/public/app/views/login.html
+++ b/public/app/views/login.html
@@ -7,7 +7,7 @@
     <div class="jumbotron text-center">
       <h1><i class="fa fa-lock"></i> Log In</h1>
       <p>Log in or register with:</p>
-      <p><a class="btn btn-primary btn-lg"><i class="fa fa-facebook"></i> Facebook</a><a href="/auth/twitter" class="btn btn-info btn-lg"><i class="fa fa-twitter"></i> Twitter</a></p>
+      <p><a href="/auth/facebook" class="btn btn-primary btn-lg"><i class="fa fa-facebook"></i> Facebook</a><a href="/auth/twitter" class="btn btn-info btn-lg"><i class="fa fa-twitter"></i> Twitter</a></p>
     </div>
 
   </div>
