--- a/public/app/views/user_mypolls.html
+++ b/public/app/views/user_mypolls.html
@@ -17,7 +17,7 @@
   <div ng-if="nopolls">
       <div class="col-md-12">
             <div class="jumbotron text-center">
-                <p class="lead"><i class="fa fa-exclamation-circle"></i> No polls found, get started by adding your first poll!</p>
+                <h3><i class="fa fa-exclamation-circle"></i> No polls found, get started by adding your first poll!</h3>
             </div>
       </div>
   </div>
