Added tweet button on poll page

--- a/public/app/views/user_poll.html
+++ b/public/app/views/user_poll.html
@@ -69,6 +69,12 @@
   
 <div class="row" id="poll-table-banner">
   <div class="container">
+    
+  <div class="col-md-12">
+    <div class="text-center">
+      <a href="https://twitter.com/intent/tweet?text=Vote on this poll - {{poll.title}}&url=https%3A%2F%2Ffcc-backend-votingapp-codemzy.c9users.io%2F%23%2Fpoll%2F{{poll.poll_id}}&hashtags=VoteGoat&via=codemzy"; target="_blank" class="btn btn-sm btn-info"><i class="fa fa-twitter"></i> Share on Twitter</a>
+    </div>
+  </div>
   
   <div class="col-md-12">
     <h3>Results table.</h3>
