--- a/public/app/views/user_profile.html
+++ b/public/app/views/user_profile.html
@@ -18,7 +18,7 @@
                 
                 <div ng-if="!user.twitter">
                     <p>
-                        <a class="btn btn-info"><i class="fa fa-twitter"></i> Link Twitter TO DO</a>
+                        <a href="/auth/twitter" class="btn btn-info"><i class="fa fa-twitter"></i> Connect Twitter</a>
                     </p>
                 </div>
                 
@@ -38,7 +38,7 @@
                 
                 <div ng-if="!user.facebook">
                     <p>
-                        <a class="btn btn-primary"><i class="fa fa-facebook"></i> Link Facebook TO DO</a>
+                        <a href="/auth/facebook" class="btn btn-primary"><i class="fa fa-facebook"></i> Connect Facebook</a>
                     </p>
                 </div>
             
