Updated profile page and footers

--- a/public/app/views/user_profile.html
+++ b/public/app/views/user_profile.html
@@ -12,7 +12,7 @@
                 <div ng-if="user.twitter">
                     <p>
                         <strong>Username</strong>: {{user.twitter.username }}<br>
-                        <strong>Display name</strong>: {{ user.twitter.displayName }}
+                        <strong>You are logged in with twitter</strong>
                     </p>
                 </div>
                 
@@ -32,7 +32,7 @@
                 <div ng-if="user.facebook">
                     <p>
                         <strong>Username</strong>: {{ user.facebook.displayName }}<br>
-                        <strong>Email</strong>: {{ user.facebook.email }}
+                        <strong>You are logged in with facebook</strong>
                     </p>
                 </div>
                 
