Working for new remote db

--- a/public/app/views/polls.html
+++ b/public/app/views/polls.html
@@ -8,6 +8,13 @@
     </div>
   </div>
 
+  <div ng-if="loading">
+      <div class="col-md-12">
+            <div class="jumbotron text-center">
+                <h3><i class="fa fa-refresh fa-5x fa-spin"></i><br>Loading Polls...</h3>
+            </div>
+      </div>
+  </div>
 
   <div class="col-md-4" ng-repeat="poll in polls">
     <a href="#/poll/{{ poll.poll_id }}">
